--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./favicon.ico">
-    <title>Youlik的个人博客</title>
+    <title>Youlik的个人网站</title>
   </head>
   <body style="margin: 0">
     <noscript>
